test/expected/explain_cf_v-c.out
explain void f() const
             ^
14: error: "const" functions are not supported in C
